fixed percent covering by outer block in stats

--- a/src/components/Stats/StatsTable/StatsTable.css
+++ b/src/components/Stats/StatsTable/StatsTable.css
@@ -260,7 +260,6 @@ html {
   height: 14px;
   z-index: inherit;
   display: inline-block;
-  background-color: red;
 }
 
 /* .ReactTable .rt-tbody .rt-td:last-child {
